// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components FormattedVal renders a formatted val 1`] = `
<div
  className="k45ou1-0 iqaJGf e345n3-0 ghfAOi"
  color="#66be54"
>
  4
</div>
`;

exports[`components FormattedVal renders a percent 1`] = `
<div
  className="k45ou1-0 iqaJGf e345n3-0 ghfAOi"
  color="#66be54"
>
  30 %
</div>
`;

exports[`components FormattedVal shows code 1`] = `
<div
  className="k45ou1-0 iqaJGf e345n3-0 ghfAOi"
  color="#66be54"
>
  BTC 4
</div>
`;

exports[`components FormattedVal shows sign 1`] = `
<div
  className="k45ou1-0 iqaJGf e345n3-0 ghfAOi"
  color="#66be54"
>
  + 4
</div>
`;

exports[`components FormattedVal shows sign 2`] = `
<div
  className="k45ou1-0 iqaJGf e345n3-0 dBXPqF"
  color="#ea2e49"
>
  - 4
</div>
`;
